--- a/webapp/view/EmpDetails.view.xml
+++ b/webapp/view/EmpDetails.view.xml
@@ -9,26 +9,8 @@
     <Input placeholder="Employee Salary" id="empSalary"/>
     <Input placeholder="Employee Currency" id="empCurrency"/>
     <Button text="Add Details" press="addDetails" /> -->
-    <f:SimpleForm editable="true">
-        <f:title >
-            <core:Title tooltip="hi" text="Employee Data" icon="sap-icon://customer"/>
-        </f:title >
-        <f:content>
-            <Label text="Employee ID" />
-            <Input id="empId" width="50%" value="{empData>/empStr/empId}"/>
-            <Label text="Employee Name" />
-            <Input id="empName" width="50%" editable="{= ${empData>/empStr/empName} === 'Simranjit Singh' ? false : true }" value="{empData>/empStr/empName}"/>
-            <Label text="Employee Salary" />
-            <Input id="empSalary" width="50%" value="{empData>/empStr/salary}"/>
-            <Label text="Employee Currency" />
-            <Input id="empCurrency" width="50%" value="{empData>/empStr/currency}"/>
-            <Label />
-            <Button text="Add Details" press="addDetails" width="50%"/>
-            <Button text="Save" press="saveDetails" width="50%"/>
-        </f:content>
 
-    </f:SimpleForm>
-    <t:Table rows="{empData>/empTab}" visibleRowCount="10" selectionMode="None" width="100%">
+    <t:Table title="{= 'Employees'+ ' ' + '('  +  ${empData>/empTab}.length + ')'} " rows="{empData>/empTab}" visibleRowCount="5" selectionMode="Single" width="100%" rowSelectionChange="onRowSelect">
         <t:columns>
             <t:Column >
                 <t:label>
@@ -60,8 +42,6 @@
                 </t:label>
                 <t:template>
                     <Image src="{= ${empData>gender} === 'Male' ? 'https://i.pinimg.com/474x/0a/52/d5/0a52d5e52f7b81f96538d6b16ed5dc2b.jpg' : 'https://w7.pngwing.com/pngs/34/886/png-transparent-female-woman-girl-computer-icons-svg-face-people-logo.png' }" height="32px" width="32px" />
-
-
                 </t:template>
             </t:Column>
             <t:Column >
@@ -95,4 +75,26 @@
             </t:Column>
         </t:columns>
     </t:Table>
+    <!-- Single Emp -->
+
+    <f:SimpleForm editable="true" objectBindings="SimpleForm" id="isSimpleForm">
+        <f:title >
+            <core:Title tooltip="hi" text="Employee Data" icon="sap-icon://customer"/>
+        </f:title >
+        <f:content>
+            <Label text="Employee ID" />
+            <Input id="empId" width="50%" value="{empData>empId}"/>
+            <Label text="Employee Name" />
+            <Input id="empName" width="50%" value="{empData>empName}"/>
+            <Label text="Employee Salary" />
+            <Input id="empSalary" width="50%" value="{empData>salary}"/>
+            <Label text="Employee Currency" />
+            <Input id="empCurrency" width="50%" value="{empData>currency}"/>
+            <Label />
+            <HBox >
+                <Button text="Add Details" press="addDetails" />
+                <Button text="Save" press="saveDetails" />
+            </HBox>
+        </f:content>
+    </f:SimpleForm>
 </mvc:View> 
